terraform/cluster/vpc.tf
# resource "aws_vpc" "vpc" {
#   cidr_block           = var.vpc_cidr
#   enable_dns_hostnames = true
#   enable_dns_support   = true

#   tags = {
#     Name = "techchallenge-vpc"
#   }
# }

# resource "aws_subnet" "public_subnet" {
#   vpc_id                  = aws_vpc.vpc.id
#   count                   = length(var.public_subnets_cidr)
#   cidr_block              = element(var.public_subnets_cidr, count.index)
#   availability_zone       = element(local.availability_zones, count.index)
#   map_public_ip_on_launch = true

#   tags = {
#     Environment = "public"
#   }
# }

# resource "aws_subnet" "private_subnet" {
#   vpc_id                  = aws_vpc.vpc.id
#   count                   = length(var.private_subnets_cidr)
#   cidr_block              = element(var.private_subnets_cidr, count.index)
#   availability_zone       = element(local.availability_zones, count.index)
#   map_public_ip_on_launch = false

#   tags = {
#     Environment = "private"
#   }
# }

# resource "aws_internet_gateway" "ig" {
#   vpc_id = aws_vpc.vpc.id
# }

# resource "aws_eip" "nat_eip" {
#   domain     = "vpc"
#   depends_on = [aws_internet_gateway.ig]
# }

# resource "aws_nat_gateway" "nat" {
#   allocation_id = aws_eip.nat_eip.id
#   subnet_id     = element(aws_subnet.public_subnet.*.id, 0)
# }

# resource "aws_route_table" "private" {
#   vpc_id = aws_vpc.vpc.id
# }

# resource "aws_route_table" "public" {
#   vpc_id = aws_vpc.vpc.id
# }

# resource "aws_route" "public_internet_gateway" {
#   route_table_id         = aws_route_table.public.id
#   destination_cidr_block = "0.0.0.0/0"
#   gateway_id             = aws_internet_gateway.ig.id
# }

# resource "aws_route" "private_internet_gateway" {
#   route_table_id         = aws_route_table.private.id
#   destination_cidr_block = "0.0.0.0/0"
#   gateway_id             = aws_nat_gateway.nat.id
# }

# resource "aws_route_table_association" "public" {
#   count          = length(var.public_subnets_cidr)
#   subnet_id      = element(aws_subnet.public_subnet.*.id, count.index)
#   route_table_id = aws_route_table.public.id
# }

# resource "aws_route_table_association" "private" {
#   count          = length(var.private_subnets_cidr)
#   subnet_id      = element(aws_subnet.private_subnet.*.id, count.index)
#   route_table_id = aws_route_table.private.id
# }
